force-app/main/default/objects/Questionnaire__c/Questionnaire__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Torc Questionnaire</label>
</CustomObject>