force-app/main/default/objects/Questionnaire__c/fields/Default_Submitter__c.field-meta.xml
<CustomField>
    <fullName>Default_Submitter__c</fullName>
    <label>Default Submitter</label>
    <length>200</length>
    <type>Text</type>
</CustomField>