force-app/main/default/objects/Questionnaire__c/fields/Non_US_Non_Match_Approver__c.field-meta.xml
<CustomField>
    <fullName>Non_US_Non_Match_Approver__c</fullName>
    <label>Non US Non Match Approver</label>
    <length>200</length>
    <type>Text</type>
</CustomField>