force-app/main/default/objects/Questionnaire__c/fields/US_Match_Approver__c.field-meta.xml
<CustomField>
    <fullName>US_Match_Approver__c</fullName>
    <label>US Match Approver</label>
    <length>200</length>
    <type>Text</type>
</CustomField>